@@ -1,8 +1,5 @@
-  
 Ruby 0.95 released
 
 "History is written by the winners"
 
-dogdogdog
-
-"Why must you take by force what you may have quietly by love?"  
+"Why must you take by force what you may have quietly by love?"   
