@@ -28,6 +28,10 @@ class CMSTest < Minitest::Test
     end
   end
 
+  def session
+    last_request.env["rack.session"]
+  end
+
   def test_index
     create_document "about.md"
     create_document "changes.txt"
@@ -51,7 +55,7 @@ class CMSTest < Minitest::Test
   end
 
   def test_viewing_markdown_document
-    create_document "about.md"
+    create_document "about.md", "# Ruby is..."
 
     get "/about.md"
 
@@ -60,27 +64,15 @@ class CMSTest < Minitest::Test
     assert_includes last_response.body, "<h1>Ruby is...</h1>"
   end
 
-  def test_history
-    create_document "history.txt"
-
-    get "/history.txt"
-
-    assert_equal 200, last_response.status
-    assert_equal "text/plain", last_response["Content-Type"]
-    assert_includes last_response.body, "Ruby 0.95 released"
-  end
-
   def test_document_not_found
     get "/notafile.ext" # Attempt to access a nonexistent file
 
     assert_equal 302, last_response.status # Assert that the user was redirected
+    
     get last_response["Location"] # Request the page that the user was redircted to
 
     assert_equal 200, last_response.status
     assert_includes last_response.body, "notafile.ext does not exist"
-
-    get "/" # Reload the page
-    refute_includes last_response.body, "notafile.ext does not exist" # Assert that our message has been removed
   end
 
   def test_editing_document
@@ -94,8 +86,6 @@ class CMSTest < Minitest::Test
   end
 
   def test_updating_document
-    create_document "changes.txt"
-
     post "/changes.txt", content: "new content"
 
     assert_equal 302, last_response.status
@@ -107,6 +97,85 @@ class CMSTest < Minitest::Test
     get "/changes.txt"
     assert_equal 200, last_response.status
     assert_includes last_response.body, "new content"
+  end
+
+  def test_view_new_document_form
+    get "/new"
+
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<input"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+
+  def test_create_new_document
+    post "/create", filename: "test.txt"
+    assert_equal 302, last_response.status
+
+    get last_response["Location"]
+    assert_includes last_response.body, "test.txt has been created"
+
+    get "/"
+    assert_includes last_response.body, "test.txt"
+  end
+
+  def test_create_new_document_without_filename
+    post "/create", filename: ""
+    assert_equal 422, last_response.status
+    assert_includes last_response.body, "A name is required"
+  end
+
+  def test_deleting_document
+    create_document("test.txt")
+
+    post "/test.txt/delete"
+
+    assert_equal 302, last_response.status
+
+    get last_response["Location"]
+    assert_includes last_response.body, "test.txt has been deleted"
+
+    get "/"
+    refute_includes last_response.body, "test.txt"
+  end
+
+  def test_signin_form
+    get "/users/signin"
+
+    assert_equal 200, last_response.status
+    assert_includes last_response.body, "<input"
+    assert_includes last_response.body, %q(<button type="submit")
+  end
+
+  def test_signin
+    post "/users/signin", username: "admin", password: "secret"
+    assert_equal 302, last_response.status
+
+    get last_response["Location"]
+    assert_includes last_response.body, "Welcome"
+    assert_includes last_response.body, "Signed in as admin"
+  end
+
+  def test_signin_with_bad_credentials
+    post "/users/signin", username: "guest", password: "shhhh"
+    assert_equal 422, last_response.status
+    assert_includes last_response.body, "Invalid credentials"
+  end
+
+  def test_signout
+    post "/users/signin", username: "admin", password: "secret"
+    get last_response["Location"]
+    assert_includes last_response.body, "Welcome"
+
+    post "/users/signout"
+    get last_response["Location"]
+
+    assert_includes last_response.body, "You have been signed out"
+    assert_includes last_response.body, "Sign In"
+  end
+
+  def test_sets_session_value
+    get "/path_that_sets_session_value"
+    assert_equal "expected value", session[:key]
   end
 end
 
