@@ -1,0 +1,7 @@
+<form method="post" action="/create">
+  <label for="filename">Add a new document:</label>
+  <div>
+    <input name="filename" id="filename" />
+    <button type="submit">Create</button>
+  </div>
+</form>
