@@ -1,0 +1,7 @@
+p File.expand_path("../test/data", __FILE__)
+
+puts
+
+p File.expand_path("../data", __FILE__)
+
+p File.join("dog", "rino", "hippo")
